[package]
name = "loomis"
version = "0.0.1"
edition = "2024"
description = "Rust web server."
license = "MIT"
repository = "https://github.com/iamwjun/loomis"
readme = "README.md"
keywords = ["ansi", "cli", "color", "terminal"]
categories = ["command-line-interface"]

[dependencies]
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
