[package]
name = "loomis"
version = "0.0.3"
edition = "2024"
description = "Rust web server."
license = "MIT"
repository = "https://github.com/iamwjun/loomis"
readme = "README.md"
keywords = ["nginx", "reverse-proxy", "http-server", "static-files", "virtual-hosts"]
categories = ["web-programming::http-server", "network-programming", "command-line-utilities"]

[dependencies]
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
